--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,23 @@ body {
     border-radius: 100px;
 
 }
+
+#startNewGameButton {
+    background-color: #4CAF50; 
+    color: white; 
+    padding: 15px 32px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 10px 0; 
+    cursor: pointer; 
+    border-radius: 8px; 
+    transition: background-color 0.3s ease; 
+
+}
+
+/* Hover-effekt */
+#startNewGameButton:hover {
+    background-color: #45a049; /* Mörkare grön vid hover */
+}
