--- a/styleModal.css
+++ b/styleModal.css
@@ -1,5 +1,4 @@
-
-.modalContainer{
+.modalContainer {
     position: absolute;
     width: 300px;
     border: 2px solid rgb(74, 73, 73);
@@ -10,11 +9,12 @@
     gap: 20px;
     background: white;
 
-    input{
+    input {
         padding: 10px;
 
     }
-    button{
+
+    button {
         background: green;
         color: white;
         border: none;
@@ -24,14 +24,14 @@
     }
 }
 
-.WHACKAMOLE{
+.WHACKAMOLE {
     margin-top: -100px;
     position: absolute;
     font-family: "Nerko One", cursive;
     font-weight: 400;
     font-style: normal;
     font-size: 5rem;
-    color: rgb(248, 121, 3); 
+    color: rgb(248, 121, 3);
     text-align: center;
     -webkit-animation-duration: 2s;
     animation-duration: 2s;
@@ -40,16 +40,28 @@
 }
 
 @keyframes fadeOut {
-    0% {scale: 1;}
-    6% {scale: 1.2;}
-    8% {scale: 1.3;}
-    7% {opacity: 1;}
-    100% {opacity: 0;}
- }
- 
- .fadeOut {
+    0% {
+        scale: 1;
+    }
+
+    6% {
+        scale: 1.2;
+    }
+
+    8% {
+        scale: 1.3;
+    }
+
+    7% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+.fadeOut {
     -webkit-animation-name: fadeOut;
     animation-name: fadeOut;
- }
-
- 
+}
