--- a/styleModal.css
+++ b/styleModal.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 300px;
     border: 2px solid rgb(74, 73, 73);
-    box-shadow: 2px 5px 20px 1px rgb(70, 68, 68);
+    box-shadow: 2px 5px 20px 1px rgb(70, 68, 68, 0.5);
     padding: 20px;
     display: flex;
     flex-direction: column;
