--- a/styleModal.css
+++ b/styleModal.css
@@ -1,5 +1,7 @@
 .modalContainer {
+    display: none;
     position: absolute;
+    color: black;
     width: 300px;
     border: 2px solid rgb(74, 73, 73);
     box-shadow: 2px 5px 20px 1px rgb(70, 68, 68, 0.5);
@@ -8,7 +10,6 @@
     flex-direction: column;
     gap: 20px;
     background: white;
-
     input {
         padding: 10px;
 
