--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,27 @@
-html,
+/* html,
 body {
     height: 100%;
     box-sizing: border-box;
-    background-color: rgb(191, 191, 206);
+    background: white;
+
+} */
+body {
+    background-color: rgb(34, 33, 32);
+    margin: 0;
+    padding: 0;
+
+
 }
 
 main {
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 1rem;
+    color: aliceblue;
+    gap: 20px;
 }
 
 section {
@@ -32,11 +43,24 @@ section {
     align-items: center;
     justify-content: center;
     margin-top: 3rem;
+    
+
+    div {
+        display: flex;
+        gap: 20px;
+        margin-top: 30px;
+    }
 }
 
+.info-box {
+    border: 2px solid rgb(109, 108, 108);
+    padding: 10px;
+    font-size: larger;
+ 
+}
 
 .game-container {
-    background-color: rgb(50, 150, 50);
+    background-image: url("img/green-grass-540x540_jpg-Dec-06-2023-05-24-24-3308-PM.webp");
     display: grid;
     grid-template-columns: repeat(5, 76px);
     gap: 10px;
@@ -47,19 +71,35 @@ section {
 
 .hole {
     height: 70px;
-    background: rgb(98, 90, 90);
-    border: 3px solid rgb(47, 43, 43);
+    background-image: url("img/jord.jpg");
+    border: 5px solid rgba(47, 43, 43, 0.587);
     cursor: pointer;
     border-radius: 100px;
 }
 
+.hole>img {
+    display: none;
+    position: absolute;
+    animation: scale-up 5 forwards;
+    width: 150px;
+    margin-left: -30px;
+    margin-top: -10px;
+}
 
+.hole,
+img.active {
+    display: inline;
 
-.hole.active {
-    background-image: url("https://media.istockphoto.com/id/177013895/sv/foto/a-mole-digging-his-way-out-of-a-pile-of-dirt.jpg?s=1024x1024&w=is&k=20&c=SV309TVtBD126GSPWM1zbh9tPbMQRSvmetLaYjGsZq4=");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    img {
+        animation: scale-up 5;
+        -webkit-animation-name: scale-up;
+        animation: scale-up .5s forwards;
+        -webkit-animation-duration: .5s;
+        animation-duration: .5s;
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
+    }
+
 }
 
 #startNewGameButton {
@@ -81,4 +121,16 @@ section {
 #startNewGameButton:hover {
     background-color: #45a049;
     /* Mörkare grön vid hover */
+}
+
+@keyframes scale-up {
+    from {
+        opacity: 0.8;
+        scale: 0.3;
+    }
+
+    to {
+        opacity: 1;
+        scale: 1.2;
+    }
 }
